[package]
name = "make_pub"
version = "1.0.1"
edition = "2024"
description = "Macro that makes all Fields in a struct public"
license = "GPL-3.0-or-later"
authors = ["Julian Wogersien <julian.wogersien@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["macro"]
homepage = "https://github.com/JulianWogersien/make_pub"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }
